Refs #9933 Fix .modal-backdrop z-index

--- a/app/assets/stylesheets/_misc.sass
+++ b/app/assets/stylesheets/_misc.sass
@@ -1,5 +1,5 @@
 .modal-backdrop
-  z-index: 2002
+  z-index: 2050
 
 .modal
   z-index: 2052
